# bss

./: .env.example  .gitignore  AGENTS.md  README.md  decisions.md  plan.MD  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
docs/: cli_watch.md  data_ingestion.md  migrations.md  rulesets.md  sabermetrics.md  session_2026-02-22.md  simulator.md
frontend/: index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  teams.ts
frontend/src/api/: client.ts  schema.ts
frontend/src/components/: Diamond.tsx  GameViewer.tsx  LineScore.tsx  PlayLog.tsx  Scoreboard.tsx
migrations/: 0001_init.sql  0002_player_season_stats_raw_components.sql  0003_roster_memberships.sql
rulesets/: mlb_2026_regular.json
src/baseball_sim/: __init__.py  config.py  main.py
src/baseball_sim/api/: __init__.py  routes.py
src/baseball_sim/cli/: __init__.py  game_log.py  roster_loader.py  tui.py  watch.py
src/baseball_sim/domain/: __init__.py  catalog.py  contracts.py  lineup_provider.py  postgres_stats.py  (+3 more)
tests/unit/: test_catalog_endpoints.py  test_cli_roster_loader.py  test_contracts.py  test_cors.py  test_determinism.py  test_game_log_writer.py  test_health.py  test_ingest_pipeline.py  test_lineups.py  test_match_id.py  test_migrations.py  test_mlb_stats_client.py  test_normalize.py  test_play_by_play.py  test_postgres_stats.py  test_roster_seeder.py  test_rulesets.py  test_sabermetrics.py  test_service_real_data.py  test_sim_state_machine.py  test_snapshot_store.py  test_stats_ingest.py  test_stats_provider.py
(+20 files in other folders)
